# glfwFramework

./: .CMakeLists.txt.swp  .gitignore  .gitignore.swp  CMakeLists.txt  main.cc  sFragment.frag  sVertex.vert
objects/: CMakeLists.txt  rObject.cc  rObject.h  textObject.cc  textObject.h
renderable/: .ebo.cc.swp  .ebo.h.swp  .renderer.cc.swp  .vao.cc.swp  CMakeLists.txt  camera.cc  camera.h  character.h  ebo.cc  ebo.h  font.cc  font.h  fontAtlas.cc  fontAtlas.h  layoutElement.h  modelAtlas.cc  modelAtlas.h  renderData.cc  renderData.h  renderer.cc  renderer.h  shader.cc  shader.h  shaderAtlas.cc  shaderAtlas.h  texture.cc  texture.h  textureAtlas.cc  textureAtlas.h  vao.cc  vao.h  vaoAtlas.cc  vaoAtlas.h  vbo.cc  vbo.h
shaders/: sFragment.frag  sText.vert  sVertex.vert
src/: GFrame.h  main.cc
src/frame/: CMakeLists.txt  app.cc  app.h
src/objects/: CMakeLists.txt  rObject.h  textObject.h
src/renderable/: CMakeLists.txt  camera.cc  camera.h  character.h  ebo.h  font.h  fontAtlas.h  layoutElement.h  modelAtlas.cc  modelAtlas.h  renderData.cc  renderData.h  renderer.cc  renderer.h  shader.cc  shader.h  shaderAtlas.cc  shaderAtlas.h  texture.cc  texture.h  textureAtlas.h  vao.h  vbo.h
src/utils/: CMakeLists.txt  GLIncludes.h  GLMacros.cc  GLMacros.h  config.cc  config.h  macros.cc  macros.h  timer.cc  timer.h
utils/: CMakeLists.txt  GLIncludes.h  config.cc  config.h  macros.cc  timer.cc  timer.h
